# internship-borelli

./: .gitignore  CMakeLists.txt  README.md  algorithms.h  complex_recalculate_benchmark.cpp  debug.h  delaunay_sliding_window_benchmark.cpp  geometry.h  questions.txt  simulation.h  st.h  types.h
cpp/: CMakeLists.txt
cpp/include/: algorithms.h  debug.h  geometry.h  simulation.h  types.h
cpp/old/: delaunay_insert_points.cpp  delaunay_sliding_window_3d.cpp
cpp/src/: algorithms.cpp  debug.cpp  geometry.cpp  tests.cpp
python/: benchmark.py  benchmark_parallel.py  changepoint_benchmark.py  changepoint_debug.py  compare_ecc.py  debug.py  debug_distances.py  ecc_plot.py  ed.py  generate_data.py  mmd.py  tewma.py  visualize.py  visualize_dist.py
python/changepoint/: tewma.py
